renamed DojoList.cs to DojoStack.cs

--- a/CodingDojo1/CodingDojo1.csproj
+++ b/CodingDojo1/CodingDojo1.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DojoElement.cs" />
-    <Compile Include="DojoList.cs" />
+    <Compile Include="DojoStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
